colour mask fix, undeclared variables

--- a/README
+++ b/README
@@ -10,7 +10,8 @@ Installing
 ----------
 
 Fluxus is a dependancy heavy application, and installing it can be a bit of a 
-challenge - anyone who can help in this regard, please get in contact!
+challenge - anyone who can help in this regard (debian packages etc), please get 
+in contact!
 
 It requires:
 
