--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,12 @@ Fluxus : (C) 2007 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 	- -r filename : record to file
 	- -p filename : playback from file
 	- -d time : seconds per frame time override (for use with frame-dump)
+* added (build-copy) for making copies of any primitive
+* pfuncs added (replacement for pdata-op)
+	- (make-pfunc)
+	- (pfunc-run)
+	- (pfunc-set!)
+	- arithmetic pfunc
 
 0.12
 
