--- a/README
+++ b/README
@@ -22,6 +22,7 @@ jack (1.0)          http://jackit.sourceforge.net/
 libsndfile (1.0.12) http://www.mega-nerd.com/libsndfile/
 liblo (0.5.0)       http://plugin.org.uk/liblo/
 glew (1.3.4)        http://glew.sourceforge.net/
+libfreetype (2.2.1) http://www.freetype.org/
 
 The version numbers in brackets are the version I've built it with, later versions
 should also be ok, let me know (via the mailing list) if you run into problems.
