--- a/README
+++ b/README
@@ -16,7 +16,7 @@ in contact!
 It requires:
 
 ode (0.5)           http://opende.sourceforge.net/
-plt scheme (369.10) http://www.plt-scheme.org/ (see below)
+plt scheme (370)    http://www.plt-scheme.org/ (see below)
 fftw (3.0.1)        http://www.fftw.org/
 jack (1.0)          http://jackit.sourceforge.net/
 libsndfile (1.0.12) http://www.mega-nerd.com/libsndfile/
@@ -33,11 +33,7 @@ actually build fluxus.
 PLT install instructions
 ------------------------
 
-For the moment you need a version of PLT which isn't officially released yet 
-(369.10 or greater), this has bug fixes in which fluxus needs to run correctly. 
-Look on the fluxus website for a source download. If you have an older version 
-of PLT installed already, you'll need to delete the /usr/local/lib/plt directory 
-to uninstall it first. 
+You probably need to install PLT from source, and do this:
 
 ./configure --enable-shared --prefix=/usr/local
 make
@@ -63,17 +59,4 @@ GLSL=0         : Set this to disable GLSL hardware shaders.
 
 There are more settings at the top of the SConstruct file which may need to be
 tweaked to correctly find things.
-
-Building the documentation
---------------------------
-
-The fluxus distribution contains extensive html documentation, along with online
-help which can be accessed by running (help "functionname") in the fluxus console.
-
-To build the html documentation:
-
-cd docs/
-./makedocs.sh
-
-This will make a fluxus directory containing the html docs.
 
