F6 fix, hacks for scheme bricks (text-params), fluxa fixes

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,11 @@
-Alex Norman 
-Artem Baguinski
-Claude Heiland-Allen
-Dan Bethell
-Dave Griffiths 
-Gabor Papp
 Glauber Alex Dias Prado
+Artem Baguinski
+Dan Bethell
 Nik Gaffney
+Dave Griffiths 
+Claude Heiland-Allen
+Alex Norman 
+Gabor Papp
+Fabien Pelisson
+Jeff Rose
 James Tittle
