--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,12 @@ Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 0.16
 
 * added Perlin noise and Simplex noise functions (noise), (snoise)
+* lots of fixes to fluxa to make it stable
+* (reparent)
+* (get-global-transform)
+* (bb-intersect)
+* inline GLSL code
+* F4 execute s expr
 
 0.15
 
