--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 * inline GLSL code
 * F4 execute s expr
 * added stippled lines, (hint-wire-stippled), (line-pattern)
+* added (set-cursor)
 
 0.15
 
