osx app building instructions added

--- a/README
+++ b/README
@@ -100,6 +100,19 @@ scons MULTITEXTURE=0 GLSL=0
 sudo scons MULTITEXTURE=0 GLSL=0 install
 
 
+It is also possible to build an OSX application of Fluxus.
+The application is built using JackOSX (http://www.jackosx.com/) instead of
+MacPorts jack. Make sure to install it before building the application.
+
+To build, type:
+
+scons --app
+./macos/osx_app-postbuild.sh
+
+Please note that at the time of writing the application only works if it is
+copied to the /Applications folder.
+
+
 Using fluxus
 ------------
 
