ode precision scons parameter added

--- a/README
+++ b/README
@@ -152,4 +152,8 @@ Create a binary which looks for it's collects in the same directory as the binar
 resides - this means that fluxus can be installed anywhere, and can carry around
 it's dependant scheme code.
 
+ODE_DOUBLE=1
+Required if the ODE library is compiled with double precision. If the wrong precision
+is enabled all floating-point data going in and out of ODE will be corrupt, producing
+ODE internal error messages and crashes.
 
