--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,7 @@ Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 * obj import, supports all face types (and triangulates them) 
 * (active-mesh) and (passive-mesh) for mesh based physics collisions 
 * (voxel->blobby) 
+* unicode support in editor
 
 0.16
 
