--- a/README
+++ b/README
@@ -152,9 +152,13 @@ Create a binary which looks for it's collects in the same directory as the binar
 resides - this means that fluxus can be installed anywhere, and can carry around
 it's dependant scheme code.
 
+STATIC_ODE=1
+Build fluxus with ODE statically linked.
+
 Note about ODE
 Fluxus requires that the ODE library is compiled with single precision. The precision
 of the ODE library is autodetected and a warning is issued if a double precision installation
 is found. In this case fluxus will run, but you are likely to get ODE internal error messages
-and crashes when using the phyisics system.
+and crashes when using the phyisics system. It is advised to install ODE with single precision
+and package fluxus with ODE statically linked.
 
