--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
 Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 
+0.18
+
+* compressed texture support
+* added (midi-program) and (midi-cc-event) by Hugo van Galen
+* midi out support
+* updated to Racket
+* added (draw-line)
+
 0.17
 
 * added render to texture support to pixel primitives,
