--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+fluxus (0.18mx1-1~precise1~ppa1) precise; urgency=low
+
+  * version for mexico workshop
+
+ -- Dave Griffiths <dave@fo.am>  Tue, 24 May 2011 16:46:13 +0200
 fluxus (0.18rc3-1~natty1~ppa1) natty; urgency=low
 
   * fixed dodgy files list
